--- a/src/app.postcss
+++ b/src/app.postcss
@@ -9,3 +9,8 @@
 	src: url('/fonts/Quicksand.ttf');
 	font-display: swap;
 }
+
+:is(.dark .anchor) {
+	--tw-text-opacity: 1;
+	color: rgb(var(--color-primary-300) / var(--tw-text-opacity));
+}
