fix add note modal

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -14,3 +14,14 @@
 	--tw-text-opacity: 1;
 	color: rgb(var(--color-primary-400) / var(--tw-text-opacity));
 }
+
+.dot {
+	width: 10px;
+	height: 10px;
+	border-radius: 50%; /* 円形 */
+	background-color: rgb(var(--color-primary-400));
+	display: inline-flex; /* フレックスアイテムとして表示 */
+	align-items: center; /* 垂直方向の中央揃え */
+	justify-content: center; /* 水平方向の中央揃え */
+	margin-right: 5px; /* "dot" と "list" の間の余白 */
+}
